# teechat-openapi

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  sgx-build.yml
bins/openapi/: Cargo.toml
bins/openapi-acme/: Cargo.toml
bins/openapi-acme/src/: main.rs
bins/openapi-dcap-helper/: Cargo.toml
bins/openapi-dcap-helper/src/: main.rs
bins/openapi-enclave/: Cargo.toml
bins/openapi-enclave/src/: main.rs
bins/openapi-tls-ceremony/: Cargo.toml
bins/openapi-tls-ceremony/src/: main.rs
bins/openapi/src/: main.rs
bins/seal-tls-key/: Cargo.toml
bins/seal-tls-key-sgx/: Cargo.toml
bins/seal-tls-key-sgx/src/: main.rs
bins/seal-tls-key/src/: main.rs
bins/teechat-openapi-attest/: Cargo.toml
bins/teechat-openapi-attest/src/: main.rs
crates/openapi-attest/: Cargo.toml
crates/openapi-attest/src/: ceremony.rs  challenge_client.rs  error.rs  github_release.rs  golden.rs  lib.rs  manifest.rs  sgx.rs  snp.rs  tls_spki.rs  verify.rs
crates/openapi-attest/tests/: manifest_policy.rs
crates/openapi-core/: Cargo.toml
crates/openapi-core/src/: auth.rs  authz.rs  catalog.rs  config.rs  ephemeral.rs  error.rs  handler.rs  http1_body.rs  key_format.rs  lib.rs  limits.rs  models.rs  quota.rs  remote_auth.rs  routes.rs  sse_usage.rs  upstream.rs  usage.rs
crates/openapi-edge/: Cargo.toml
crates/openapi-edge/src/: lib.rs
crates/openapi-http/: Cargo.toml
crates/openapi-http/src/: lib.rs  request.rs  response.rs  server.rs  sse.rs  streaming.rs
crates/openapi-platform/: Cargo.toml
crates/openapi-platform-cvm/: Cargo.toml
crates/openapi-platform-cvm/src/: amd_sp_key.rs  attest.rs  compile_features.rs  edge_upstream.rs  env.rs  gateway_ope_api.rs  guest_digest.rs  lib.rs  ope_upstream.rs  ope_wrap.rs  push.rs  remote_client.rs  seal.rs  seal_sync.rs  snp_report.rs  tls.rs  tls_ceremony.rs  tls_key_policy.rs  upstream.rs
crates/openapi-platform-sgx/: Cargo.toml
crates/openapi-platform-sgx/src/: attest.rs  dcap.rs  env.rs  lib.rs  remote_client.rs  report.rs  run.rs  seal.rs  tls.rs  upstream.rs
crates/openapi-platform/src/: challenge.rs  edge_policy.rs  lib.rs  profile.rs  seal.rs  tls.rs
deploy/cvm/: Dockerfile  README.md  issue-and-seal-tls.sh  nginx-openapi-acme.conf  teechat-openapi-acme-renew.service  teechat-openapi-acme-renew.timer  teechat-openapi.service
deploy/sgx/: README.md  build-enclave.sh  ensure-ring-fortanix-patch.sh  run-dcap-helper.sh  run-enclave.sh  setup-pccs.sh  sgx-preflight.sh
docs/: attestation-challenge.md  security-review-2026-07-12.md  security-review-2026-07-14.md  security-review-2026-07-15.md  security-review-2026-07-20.md  streaming-contract.md
manifest/keys/: README.md  openapi-attestation-v1.pub
manifest/release/: README.md  openapi-edge-attest.json
manifest/schema/: attestation-challenge-request.v1.json  attestation-challenge-response.v1.json  openapi-edge-manifest.v1.json  sealed-tls-key.v1.json  signed-key-catalog.v1.json  usage-report.v1.json
scripts/: dev-run-sgx.sh  dev-run.sh  seal-tls-key-sgx.sh  seal-tls-key.sh  smoke-openapi-agent.sh  verify-tls13-only.sh
test-fixtures/: openapi-cross-sign.json
