[workspace]
resolver = "2"
members = [
    "crates/openapi-platform",
    "crates/openapi-core",
    "crates/openapi-http",
    "crates/openapi-platform-cvm",
    "crates/openapi-platform-sgx",
    "bins/openapi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Lightec-AI/teechat-openapi"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
httparse = "1.10"
rand = "0.8"
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
ureq = { version = "2.12", default-features = false, features = ["tls"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
