[workspace]
resolver = "2"
members = [
    "crates/openapi-platform",
    "crates/openapi-core",
    "crates/openapi-http",
    "crates/openapi-edge",
    "crates/openapi-platform-cvm",
    "crates/openapi-platform-sgx",
    "crates/openapi-attest",
    "bins/openapi",
    "bins/openapi-enclave",
    "bins/openapi-dcap-helper",
    "bins/seal-tls-key",
    "bins/seal-tls-key-sgx",
    "bins/openapi-tls-ceremony",
    "bins/teechat-openapi-attest",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Lightec-AI/teechat-openapi"
rust-version = "1.75"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12"
httparse = "1.10"
rand = "0.8"
# TLS 1.3 only on the edge listener — do not re-enable tls12 without security review.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.12", default-features = false, features = ["tls"] }
ope-crypto = "=0.1.0"
ope-e2e = "=0.1.0"
ope-envelope = "=0.1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Applied only for SGX builds via deploy/sgx/build-enclave.sh (Cargo.toml.sgx-patch).
# Do not add [patch.crates-io] here — it breaks CVM builds when vendor/ring is absent.
