[package]
name = "seal-tls-key"
description = "Seal a TLS private key PEM to the edge guest measurement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "seal-tls-key"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
openapi-platform-cvm = { path = "../../crates/openapi-platform-cvm" }
