[package]
name = "openapi-core"
description = "OpenAI-compatible edge proxy core — routes, auth, catalog, usage, upstream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
openapi-platform = { path = "../openapi-platform" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[features]
test-utils = []

[dev-dependencies]
serde_json = { workspace = true }
