[package]
name = "openapi-http"
description = "HTTP/1.1 server and OpenAI SSE helpers for teechat-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
httparse = { workspace = true }
openapi-core = { path = "../openapi-core" }
openapi-platform = { path = "../openapi-platform" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
openapi-core = { path = "../openapi-core", features = ["test-utils"] }
rand = { workspace = true }
