[package]
name = "openapi-platform-cvm"
description = "Linux CVM (SEV/TDX guest) platform backend for teechat-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
# Path works when checked out as TeeChat vendor/teechat-openapi beside vendor/attested-mtls.
# Standalone CI should switch to crates.io / git after Lightec-AI/teechat-attested-mtls is published.
attested-mtls = { path = "../../../attested-mtls/crates/attested-mtls" }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
openapi-core = { path = "../openapi-core" }
openapi-platform = { path = "../openapi-platform" }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
webpki-roots = "0.26"

[dev-dependencies]
rand = { workspace = true }
rcgen = "0.13"
