[package]
name = "openapi-platform-cvm"
description = "Linux CVM (SEV/TDX guest) platform backend for teechat-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
attested-mtls = { workspace = true }
attested-mtls-seal-sync = { workspace = true }
attested-mtls-snp-seal = { workspace = true, features = ["sev-guest", "test-hooks"] }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
openapi-core = { path = "../openapi-core" }
openapi-platform = { path = "../openapi-platform" }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
ope-crypto = { workspace = true }
ope-e2e = { workspace = true }
ope-envelope = { workspace = true }
webpki-roots = "0.26"

[dev-dependencies]
rand = { workspace = true }
rcgen = "0.13"
