[package]
name = "openapi-platform-sgx"
description = "Fortanix EDP SGX platform backend for teechat-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
openapi-core = { path = "../openapi-core" }
openapi-edge = { path = "../openapi-edge" }
openapi-http = { path = "../openapi-http" }
openapi-platform = { path = "../openapi-platform" }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
rustls = { workspace = true }

[target.'cfg(target_env = "sgx")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[dev-dependencies]
rcgen = "0.13"
rand = { workspace = true }

[features]
default = []
