[package]
name = "openapi-platform"
description = "TEE platform traits for teechat-openapi edge proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
