[package]
name = "openapi-platform"
description = "TEE platform traits for teechat-openapi edge proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
rcgen = "0.13"
