[package]
name = "openapi-platform"
description = "TEE platform traits for teechat-openapi edge proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
attested-mtls-snp-seal = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

# aws-lc-sys needs pthread_rwlock_t — unavailable under Fortanix EDP.
[target.'cfg(not(target_env = "sgx"))'.dependencies]
rustls = { workspace = true }

[target.'cfg(target_env = "sgx")'.dependencies]
ring = { version = "0.17", features = ["less-safe-getrandom-custom-or-rdrand"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
rcgen = "0.13"
